--- a/Classes/ProgramDetailViewController.xib
+++ b/Classes/ProgramDetailViewController.xib
@@ -54,7 +54,7 @@
 				<float key="IBUISectionHeaderHeight">10</float>
 				<float key="IBUISectionFooterHeight">10</float>
 			</object>
-			<object class="IBUITextField" id="390749379">
+			<object class="IBUITextField" id="604640189">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<string key="NSFrameSize">{317, 51}</string>
@@ -80,7 +80,9 @@
 				<bool key="IBUIClearsOnBeginEditing">YES</bool>
 				<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
 				<float key="IBUIMinimumFontSize">17</float>
-				<object class="IBUITextInputTraits" key="IBUITextInputTraits"/>
+				<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+					<int key="IBUIAutocapitalizationType">1</int>
+				</object>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -114,7 +116,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">description</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="390749379"/>
+						<reference key="destination" ref="604640189"/>
 					</object>
 					<int key="connectionID">9</int>
 				</object>
@@ -146,7 +148,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="390749379"/>
+						<reference key="object" ref="604640189"/>
 						<reference key="parent" ref="0"/>
 					</object>
 				</object>
@@ -343,7 +345,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="655016683">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="458346585">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">UIKit.framework/Headers/UIResponder.h</string>
 					</object>
@@ -359,7 +361,7 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">UIResponder</string>
 					<string key="superclassName">NSObject</string>
-					<reference key="sourceIdentifier" ref="655016683"/>
+					<reference key="sourceIdentifier" ref="458346585"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UIScrollView</string>
@@ -404,14 +406,14 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">UITextField</string>
 					<string key="superclassName">UIControl</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="976537421">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="494735388">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">UIKit.framework/Headers/UITextField.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UIView</string>
-					<reference key="sourceIdentifier" ref="976537421"/>
+					<reference key="sourceIdentifier" ref="494735388"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UIView</string>
