--- a/Classes/ProgramElementViewCell.xib
+++ b/Classes/ProgramElementViewCell.xib
@@ -77,9 +77,9 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{152, 2}, {52, 21}}</string>
 								<reference key="NSSuperview" ref="195454397"/>
-								<object class="NSColor" key="IBUIBackgroundColor" id="1011692674">
+								<object class="NSColor" key="IBUIBackgroundColor" id="6941359">
 									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4wMTUzMDYxMjI0NSAwLjAxNTMwNjEyMjQ1IDAuMDE1MzA2MTIyNDUgMAA</bytes>
+									<bytes key="NSRGB">MCAwIDAgMAA</bytes>
 								</object>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -90,9 +90,9 @@
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">16</int>
 								</object>
-								<object class="NSColor" key="IBUITextColor" id="1038855079">
+								<object class="NSColor" key="IBUITextColor" id="700090973">
 									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC40ODQ2OTM4Nzc2IDAuNDg0NjkzODc3NiAwLjQ4NDY5Mzg3NzYAA</bytes>
+									<bytes key="NSRGB">MC4yNDQ4OTc5NTkyIDAuMjQ0ODk3OTU5MiAwLjI0NDg5Nzk1OTIAA</bytes>
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
@@ -104,13 +104,13 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{206, 2}, {33, 21}}</string>
 								<reference key="NSSuperview" ref="195454397"/>
-								<reference key="IBUIBackgroundColor" ref="1011692674"/>
+								<reference key="IBUIBackgroundColor" ref="6941359"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="IBUIText">1.2</string>
 								<reference key="IBUIFont" ref="234099849"/>
-								<reference key="IBUITextColor" ref="1038855079"/>
+								<reference key="IBUITextColor" ref="700090973"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
@@ -121,13 +121,13 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{152, 20}, {52, 21}}</string>
 								<reference key="NSSuperview" ref="195454397"/>
-								<reference key="IBUIBackgroundColor" ref="1011692674"/>
+								<reference key="IBUIBackgroundColor" ref="6941359"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="IBUIText">GOE:</string>
 								<reference key="IBUIFont" ref="234099849"/>
-								<reference key="IBUITextColor" ref="1038855079"/>
+								<reference key="IBUITextColor" ref="700090973"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
@@ -138,13 +138,13 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{206, 20}, {33, 21}}</string>
 								<reference key="NSSuperview" ref="195454397"/>
-								<reference key="IBUIBackgroundColor" ref="1011692674"/>
+								<reference key="IBUIBackgroundColor" ref="6941359"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="IBUIText">1.2</string>
 								<reference key="IBUIFont" ref="234099849"/>
-								<reference key="IBUITextColor" ref="1038855079"/>
+								<reference key="IBUITextColor" ref="700090973"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
@@ -155,15 +155,13 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{233, 12}, {33, 21}}</string>
 								<reference key="NSSuperview" ref="195454397"/>
+								<reference key="IBUIBackgroundColor" ref="6941359"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="IBUIText">1.2</string>
 								<reference key="IBUIFont" ref="234099849"/>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC40NTQwODE2MzI3IDAuNDU0MDgxNjMyNyAwLjQ1NDA4MTYzMjcAA</bytes>
-								</object>
+								<reference key="IBUITextColor" ref="700090973"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
